--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "recharts": "2.5.0",
     "tailwindcss": "^4.1.11"
   },
